# wagtail-modeladmin-export-example

./: COPYING  README.md  manage.py  pyproject.toml  requirements.txt
wma_export_example/: asgi.py  settings.py  urls.py  wsgi.py
wma_export_example/apps/persons/: apps.py  models.py  wagtail_hooks.py
wma_export_example/apps/persons/migrations/: 0001_initial.py
wma_export_example/apps/persons/templates/modeladmin/persons/person/: index.html
wma_export_example/apps/wma_export/: apps.py  exporter.py
wma_export_example/apps/wma_export/templates/wma_export/: export.html
